# opensearch-ingestor

./: README.md  pyproject.toml
.github/workflows/: python.yml
opensearch_ingestor/: main.py
